Fix scroll bar appearing when too small

--- a/index.css
+++ b/index.css
@@ -23,8 +23,7 @@ body {
     display: flex;
     font-family: Agave, monospace;
     flex-direction: row;
-    width: 100vw;
-    height: 100vh;
+    min-height: 100vh;
     margin: 0;
     padding: 0;
     background-color: #202026;
@@ -34,7 +33,6 @@ body {
   font-size: 1.5rem;
   display: flex;
   flex-direction: column;
-  height: 100%;
   background-color: #000000;
 }
 
